--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "element-plus": "^2.9.6",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue3-lottie": "^3.3.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
