--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "element-plus": "^2.9.6",
     "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
     "vue3-lottie": "^3.3.1"
   },
   "devDependencies": {
